# UnraidMonitor

./: .dockerignore  .env.example  .gitignore  AUDIT_FINDINGS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SECURITY_AUDIT_REPORT.md  docker-compose.yml  entrypoint.sh  my-UnraidMonitorBot.xml  package-lock.json  pyproject.toml  requirements.txt  unraid-template.xml
.claude/: settings.json
.claude/structure/: alerts.yaml  bot.yaml  llm.yaml  monitors.yaml  root.yaml  services.yaml  unraid.yaml  utils.yaml
.serena/: project.yml
audit-plans/: audit-plan-2026-03-07.md
config/: .env.example  config.yaml
docs/: audit-report-2026-02-06.md  user-guide.md
src/: config.py  main.py  models.py  state.py
src/alerts/: array_mute_manager.py  (+6 more)
tests/: test_alert_callbacks.py  test_alert_manager.py  test_anthropic_provider.py  test_api_errors.py  test_base_mute_manager.py  test_commands.py  test_config.py  test_config_extended.py  test_config_writer.py  test_confirmation.py  test_container_classifier.py  test_control_commands.py  test_default_config.py  test_details_handler.py  test_diagnose_command.py  test_diagnose_integration.py  test_diagnostic.py  test_docker_client.py  test_docker_events.py  test_formatting.py  test_formatting_utils.py  test_health_command.py  test_ignore_command.py  test_ignore_manager.py  test_llm_provider.py  test_log_watcher.py  test_main.py  test_manage_command.py  test_memory_monitor.py  test_model_command.py  test_multi_provider_config.py  test_multi_provider_integration.py  test_mute_command.py  test_nl_handler.py  test_nl_integration.py  test_nl_processor.py  test_nl_tools.py  test_ollama_provider.py  test_openai_provider.py  test_p2_coverage_a.py  (+16 more)
(+51 files in other folders)
