[project]
name = "unraid-monitor-bot"
version = "0.7.2"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "unraid-api>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
