[project]
name = "unraid-monitor-bot"
version = "0.7.2"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.0.0",
    "aiogram>=3.4.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.40.0",
    "unraid-api>=0.1.0",
    "psutil>=5.9.0",
    "aiohttp>=3.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
