[project]
name = "unraid-monitor-bot"
version = "0.9.1"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.0.0,<8.0.0",
    "aiogram>=3.4.0,<4.0.0",
    "pyyaml>=6.0,<7.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "unraid-api>=1.0.0,<2.0.0",
    "psutil>=5.9.0,<7.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
ai = [
    "anthropic>=0.40.0,<1.0.0",
    "openai>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
